# zalupa

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  audio_out.c  audio_out.h  buzzer.c  buzzer.h  cloud.c  cloud.h  commands.h  dht11.c  dht11.h  idf_component.yml  main.c  oled_ui.c  oled_ui.h  ssd1306.c  ssd1306.h  state.c  state.h  tts.c  tts.h  web.c  web.h  webpage.h
va-server/: requirements.txt  va_server.py
